--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@types/node": "20.3.3",
@@ -24,6 +26,17 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.2"
+    "@playwright/test": "^1.37.1",
+    "@storybook/addon-essentials": "7.4.0",
+    "@storybook/addon-interactions": "7.4.0",
+    "@storybook/addon-links": "7.4.0",
+    "@storybook/addon-onboarding": "1.0.8",
+    "@storybook/blocks": "7.4.0",
+    "@storybook/nextjs": "7.4.0",
+    "@storybook/react": "7.4.0",
+    "@storybook/testing-library": "0.2.0",
+    "@types/uuid": "^9.0.2",
+    "eslint-plugin-storybook": "^0.6.13",
+    "storybook": "7.4.0"
   }
 }
