--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,10 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "Com/*": ["./*"]
+      "Com/*": ["app/components/*"],
+      "~/*": ["app/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
